SE CAMBIO PERMISOS DE HEADER